src/test/deca/context/valid/decl_method.deca
class A {
float y;
int method(int x){
return x;
}
}