src/test/deca/context/invalid/two_methods_same_names.deca
class A{
int methode(int y){
return y;
}
int methode(int x){
return x;
}
}